2012-09-04 John Wu <John dot Wu at ACM dot org>
	* src/islice.cpp: slice::constructT reverses the order of the bits
	to match the order used in iskive.cpp (in order to correctly reuse
	the functions such as evalGE and evalEQ)
	* src/array_t.h: reorganize the tests in function push_back to
	avoid the possibility of a producing a negative value for nexist
	(potentially the problem reported by Michael Beauregard about an
	exception complaining about array_t must have less than 2^31
	elements)

2012-09-03 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: part::reorderBitmap neglected to use iorder,
	'make check' passes with the null value in test0.csv - reordering
	functions can work with null masks now
	* src/part.cpp:372 expand the test on readonly condition (previous
	version causes an exception)

2012-09-02 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: update part::reorder to avoid calling
	purgeInactive when the data partition is declared readonly, add
	function reorderBitmap to work with the null mask during
	reordering

2012-09-01 John Wu <John dot Wu at ACM dot org>
	* tests/test0.csv: remove the last value for the second column to
	make it a NULL value
	* tests/Makefile.am: update the reading of test0 to use ardea so
	as to interpret the missing entry as NULL value
	* src/util.cpp: readDouble skip the delimiter in early return
	branch

2012-08-31 John Wu <John dot Wu at ACM dot org>
	* src/icmoins.cpp: in function convert, remove leftover statements
	that assigns bits to nil pointers
	* src/fileManager.h, src/fileManager.cpp: comment out all
	statements related to rwlock in an attempt to simplify the logic
	about access control (to address the deadlock problem reported by
	Petr Velan)
	* src/ixpack.cpp, src/ixfuge.cpp: change test of (nobs <= 1) in
	the function write to be (nobs <= 0) to allow indexes with a
	single bitmap
	* src/parth*.cpp: retrieve null masks before counting the values
	(a problem reported by Andrew Olson)